--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hooks_riverpod: ^1.0.4
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.11
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
